--- a/addons/sourcemod/translations/csgo_models.phrases.txt
+++ b/addons/sourcemod/translations/csgo_models.phrases.txt
@@ -45,7 +45,7 @@
 		"en"		"Turn off the gloves in the inventory for the model's gloves to work."
 		"ru"		"Отключите перчатки в инвентаре для работы перчаток модели."		
 	}
-	"Del arms announce"
+	"Only alive select nodel"
 	{
 		"en"		"Model selection is only available to live players."
 		"ru"		"Выбор модели доступен только живым игрокам."		
