Add Translations Turkish
Add Translations Turkish

--- a/addons/sourcemod/translations/csgo_models_names.phrases.txt
+++ b/addons/sourcemod/translations/csgo_models_names.phrases.txt
@@ -2,11 +2,13 @@
 {
 	"Standard"
 	{
+		"tr"        "Normal"
 		"en"		"Standard"
 		"ru"		"Стандартная"		
 	}
 	"Mila"
 	{
+		"tr"        "Mila"
 		"en"		"Mila"
 		"ru"		"Мила"		
 	}
