--- a/addons/sourcemod/translations/csgo_models.phrases.txt
+++ b/addons/sourcemod/translations/csgo_models.phrases.txt
@@ -38,7 +38,7 @@
 	}
 	"Only available in the purchase area"
 	{
-                "en"		"Model seçimi yalnızca satın alma alanında kullanılabilir."
+                "tr"		"Model seçimi yalnızca satın alma alanında kullanılabilir."
 		"en"		"Model selection is only available in the purchase area."
 		"ru"		"Выбор модели доступен только в зоне закупки."		
 	}
